--- a/practice-Components/package.json
+++ b/practice-Components/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "validator": "^13.15.26"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
