--- a/practice-Components/package.json
+++ b/practice-Components/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.13.4",
     "dayjs": "^1.11.13",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-map-gl": "^8.1.0",
     "validator": "^13.15.26"
   },
   "devDependencies": {
